Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,15 @@
 
 # 管理篇
 
+## 2017-01-19  面试的巨人，行动的矮人
+首因效应：首因，就是我们常说的第一印象。
+光环效应：是指对一个人的某种优点，或者缺点产生深刻、突出的印象后，这种优点或者缺点，会像月晕的光环一样被夸大。
+近因效应：在多人面试的时候，如果几个人水平差不多，面试官会对最后一个人印象最深。
+
+作为面试官，你的考验就是：
+  - 避免“以貌取人”，或者是“以简历取人”。
+  - 避免第一感给你造成的心理倾向。
+
 ## 2017-01-18  鱼头美女身，美女头鱼身，你选哪一个？
 态度，包括是否积极主动、富有责任心、愿意协作，这是养成的性格，简单来说，就是“想干”；
 能力，包括是否有做这件事的知识储备、是否有多年的经验、是否有相关的资源等，这是习得的技能，简单来说，就是“能干”。
