--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-19  恐惧
+故事：尼克松，水门事件，X 档案
+
+尼采说：“世间的坏事，四分之三来自恐惧。”
+恐惧有很大的动力，会使人做出原本不必做的事和原本做不出来的事。
+
 ## 2017-01-18  禁烟
 故事：烟草起源，禁烟历史
 
