Adds reading notes for the book - IH.

--- a/note/...book_信息简史.md
+++ b/note/...book_信息简史.md
@@ -69,3 +69,20 @@ Ada 对于未来也有一个最后的梦想：
 一如爱达，图灵是个程序员。他将自己想象成一台计算机，关注自己思维过程中的一步步逻辑。
 
 > 后面部分介绍了香农的信息论，比较晦涩
+
+
+## 8. 信息转向
+> 大篇幅介绍了诺伯特·维纳（控制论）和香农（信息论）的故事。
+
+维纳总是会在书名中加神童两字，如《昔日神童：我的童年与青年时代》和《我是数学家：一个神童后来的生活》。
+从塔夫茨学院数学专业本科毕业，然后到哈佛大学研究生院（动物学专业）和康奈尔大学（哲学专业）深造，
+然后回到哈佛取得博士学位，再前往英国剑桥大学，师从罗素本人，研究符号逻辑和《数学原理》。
+罗素对维纳并不是全然欣赏，他曾在给友人的信中写到：
+“我这来了个名叫维纳的神童，十八岁，哈佛大学博士...
+这孩子被惯坏了，以为自己是全能的上帝——我俩之间总是在暗暗较劲究竟谁该教谁。”
+
+香农把自己视为数学家和工程师，维纳则认为自己首先是个哲学家，甚至从火控系统的研究中，他也能得出关于目的和行为的哲学结论。
+
+大脑有神经元，这些神经细胞在任意给定时刻都处在以下两种状态之一：动作（点火）或静止（休止）。
+因此，它们可以被视为双稳态继电器。神经元彼此连接，形成大型阵列，其接触点称为突触。讯息就在神经网络中传递。
+大脑和电子计算机在执行逻辑运算时都需要大量能量。这些能量“被消耗，转化成了热量”，并被血液或通风和冷却设施带走。
