Adds reading notes for the columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,11 @@
 
 # 管理篇
 
+## 2017-01-20  你们说回去等消息，后来给消息了吗？
+面试攻关：
+如果一个人面试成功了，你有很长时间建立他对公司的好感，但是如果面试失败了，他可能带着负面情绪离开，你却连辩解的机会都没有。
+这些人未来，可能是你的伙伴、客户或者竞争对手。
+
 ## 2017-01-19  面试的巨人，行动的矮人
 首因效应：首因，就是我们常说的第一印象。
 光环效应：是指对一个人的某种优点，或者缺点产生深刻、突出的印象后，这种优点或者缺点，会像月晕的光环一样被夸大。
