Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-22  犯罪率为何下降？
+故事：美国堕胎合法化事件，诺尔玛·麦科维
+
+## 2017-01-21  信心走路
+故事：一条两前肢天生残疾的狗 —— “信心（Faith）”
+
 ## 2017-01-20  监狱犬
 故事：托尼·奥林奇，监狱犬伙伴计划，保利娜修女创办
 
