--- a/note/...handy_notes.md
+++ b/note/...handy_notes.md
@@ -98,6 +98,8 @@ We are often not aware of the true significance of an event until that event bec
     -- 路德维希·维特根斯坦
 
 当你在凝视深渊的时候，深渊也正在凝视着你。
+世间的坏事，四分之三来自恐惧。
+我感到难过，不是因为你欺骗了我，而是因为我再也不能相信你了。
     -- 尼采
 
 任何好的商业都必须是能挣钱的，否则就是对人类的犯罪，因为有限的资源可以用于其它的地方。
