Adds reading notes for the book - IH.

--- a/note/...book_信息简史.md
+++ b/note/...book_信息简史.md
@@ -86,3 +86,18 @@ Ada 对于未来也有一个最后的梦想：
 大脑有神经元，这些神经细胞在任意给定时刻都处在以下两种状态之一：动作（点火）或静止（休止）。
 因此，它们可以被视为双稳态继电器。神经元彼此连接，形成大型阵列，其接触点称为突触。讯息就在神经网络中传递。
 大脑和电子计算机在执行逻辑运算时都需要大量能量。这些能量“被消耗，转化成了热量”，并被血液或通风和冷却设施带走。
+
+
+## 9. 熵及其妖
+熵：  
+无法被转换为功的那部分能量，是能量的不可用程度。
+混乱、无序，可视为熵的本质特性。
+
+生物体以负熵为食，新陈代谢的本质是，生物体成功地使自己摆脱在其存活期内所必然产生的所有熵。
+换言之，生物从周围环境中汲取秩序。草食动物和肉食动物以各种结构为食，
+它们摄取物质组织得井然有序的有机化合物，吸收消化后，再将其排出体外。
+这时物质的有序度已经大大降低，但并未完全退化，因为它还能被植物利用。
+
+薛定谔使用「基因」一词：某个遗传特征的假想的物质载体。
+这些微小实体却必须找到某种方法封装下一个生物体的全部模式，并且这个模式还必须是个四维对象。
+即生物体的三维结构，再加上从胚胎到成年的每个发育阶段的演变（时间维度）。
