Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,11 @@
 
 # 管理篇
 
+## 2017-01-23  谁跟我谈战略，我开除谁
+蘑菇定律：
+特指，年轻的基层新员工，常被置于没人注意的角落，不受重视，甚至打杂、跑腿、受到苛责。
+就像蘑菇一样：在阴暗处静静生长，没人关注，甚至有时还要被浇上大粪。
+
 ## 2017-01-20  你们说回去等消息，后来给消息了吗？
 面试攻关：
 如果一个人面试成功了，你有很长时间建立他对公司的好感，但是如果面试失败了，他可能带着负面情绪离开，你却连辩解的机会都没有。
