--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-23  在黑暗中举起火炬
+故事：何凤山，中国版辛德勒
+
 ## 2017-01-22  犯罪率为何下降？
 故事：美国堕胎合法化事件，诺尔玛·麦科维
 
