--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,20 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-23  我能赚得更多吗？
+绝大多数人根本不知道 15% 以上的投资回报率“很可能原本就不属于自己”，于是，无知无畏。
+与大多数人认为的不同，“价值”并不是排在第一位的，“长期”应该先排上，然后再就加上“价值”，即“长期价值” —— 这才是我们要追求的东西。
+
+每个人进入股票市场之后，都会看一段时间 K 线图 ,因为:
+刚开始啥都不懂，实在没什么别的可看的;
+那 K 线图很刺激人性，总是可以让你感觉“所见即所得”。
+
+股票市场短期是个投票机，长期是个称重机。
+    -- 格雷厄姆
+
+买股票但不知道究竟买了什么，就如同手持火把穿过一个炸药工厂，你可能活下来，但是你仍然是个傻子。
+    -- 格林布雷，哥谭基金
+
 ## 2017-01-16  你能准确预测股价吗？
 如果预测的准确率高到一定程度，比如 60% 以上，那么也就是说，10 次里有至少 6 次预测准确，
 那就一直预测下去，不仅要预测，还要用钱去“赌”——长期来看，一定会赚钱，赚很多钱。
