Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,11 @@
 
 # 管理篇
 
+## 2017-01-24  有人欺负你，就报我的名字
+师徒制：就是所谓的“传帮带”。
+现代的师徒制，更强调帮扶和带领，而不是传授了，它让新员工更快、更好地融入公司，
+同时让“师傅”，能获得更多的职业成就感，并锻炼领导力。
+
 ## 2017-01-23  谁跟我谈战略，我开除谁
 蘑菇定律：
 特指，年轻的基层新员工，常被置于没人注意的角落，不受重视，甚至打杂、跑腿、受到苛责。
