--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-24  千里良马谁识得
+故事：披头士，其经纪人布莱恩·爱泼斯坦
+
 ## 2017-01-23  在黑暗中举起火炬
 故事：何凤山，中国版辛德勒
 
