Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,19 @@
 
 # 管理篇
 
+## 2017-01-25  他是钉子你用锤子，他是螺丝你用改锥
+情境管理：
+肯·布兰查德把“不同情境，不同管理”的方法论，叫做：情境管理（Situational Leadership）。
+他认为，同一个员工，面对同一项任务，因为意愿（Desire）的高低不同，和能力（Ability）的强弱不同，就有四种情境：
+
+  - D1，热心的生手。刚接手一项新任务的员工，通常意愿高，很想干，但是能力弱。
+  - D2，憧憬幻灭的学习者。工作了一段时间，能力有提升，但未达到胜任的程度，员工开始迷惘甚至沮丧。这时他的工作意愿降低，能力在弱到一般的水平。
+  - D3，能干谨慎的执行者。员工继续进步，有较好的工作能力了，但信心还不稳定。这时，员工的意愿不定，能力中等到强。
+  - D4，独立自主的完成者。员工终于完全胜任工作了，很兴奋，这时，他们的意愿最高，能力最强。
+
+情境管理，就是针对员工发展的四个情境：
+热心的生手、憧憬幻灭的学习者、能干谨慎的执行者、独立自主的完成者，分别使用指令、教练、支持和授权的管理方法。
+
 ## 2017-01-24  有人欺负你，就报我的名字
 师徒制：就是所谓的“传帮带”。
 现代的师徒制，更强调帮扶和带领，而不是传授了，它让新员工更快、更好地融入公司，
