--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-25  解放石头中的生命
+故事：米开朗基罗，大卫雕像
+
 ## 2017-01-24  千里良马谁识得
 故事：披头士，其经纪人布莱恩·爱泼斯坦
 
