--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -13,11 +13,9 @@
 刚开始啥都不懂，实在没什么别的可看的;
 那 K 线图很刺激人性，总是可以让你感觉“所见即所得”。
 
-股票市场短期是个投票机，长期是个称重机。
-    -- 格雷厄姆
-
-买股票但不知道究竟买了什么，就如同手持火把穿过一个炸药工厂，你可能活下来，但是你仍然是个傻子。
-    -- 格林布雷，哥谭基金
+“操别人的心”和“有能力真正为他人着想、真正帮到他人（亲人、朋友、甚至陌生人）”之间有很大的区别、很远的距离。
+你要明白这世界的残酷之处：
+有时候你明明是正确的，可只是因为运气不好，就没有得到好结果，甚至“下场”很惨 —— 这世界没有义务一定要在你对的时候给你正反馈。
 
 ## 2017-01-16  你能准确预测股价吗？
 如果预测的准确率高到一定程度，比如 60% 以上，那么也就是说，10 次里有至少 6 次预测准确，
