--- a/note/...handy_notes.md
+++ b/note/...handy_notes.md
@@ -6,6 +6,12 @@ date      : 2016-02-13
 
 ## 散记
 
+股票市场短期是个投票机，长期是个称重机。
+    -- 格雷厄姆
+
+买股票但不知道究竟买了什么，就如同手持火把穿过一个炸药工厂，你可能活下来，但是你仍然是个傻子。
+    -- 格林布雷，哥谭基金
+
 走自己的路，让别人说去吧。
     -- 但丁
 
