adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,8 +7,13 @@
 
 # 管理篇
 
+## 2017-01-26  用危机和竞争，激活团队
+鲶鱼效应：  
+挪威人爱吃沙丁鱼，尤其是鲜活的，所以活沙丁鱼的价格，是死的好几倍。但沙丁鱼生性懒惰不爱动，船舱里又缺氧，运到码头时，会死很多。据说，有位聪明的渔民想到一个办法：往鱼槽里扔一条鲶鱼。因为鲶鱼的入侵，沙丁鱼非常紧张，快速游动，最后，居然就活着到了港口。
+这种被对手激活的现象，被称作"鲶鱼效应"。
+
 ## 2017-01-25  他是钉子你用锤子，他是螺丝你用改锥
-情境管理：
+情境管理：  
 肯·布兰查德把“不同情境，不同管理”的方法论，叫做：情境管理（Situational Leadership）。
 他认为，同一个员工，面对同一项任务，因为意愿（Desire）的高低不同，和能力（Ability）的强弱不同，就有四种情境：
 
