--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-1-26  活人才付钱
+故事：英国运送犯人到澳大利亚
+
 ## 2017-01-25  解放石头中的生命
 故事：米开朗基罗，大卫雕像
 
