Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-27  明明早知道
+故事：挑战者号航天飞机
+
 ## 2017-1-26  活人才付钱
 故事：英国运送犯人到澳大利亚
 
