--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,14 @@
 
 # 管理篇
 
+## 2017-01-27  让员工的脚步，跟上你的思路
+贝尼斯定理：  
+让你的员工越来越值钱。不把你的员工当成消费品，试着把他们当成投资品。工作是消费，培训是投资。
+著名企业管理学教授沃伦·贝尼斯说：员工培训是企业风险最小、收益最大的战略性投资。
+
+工作本身，并不是学习。只有从工作中提取出了可被重用的经验、教训、方法、逻辑、理论，才是学习。
+我们都听说过“10000小时定律”，但是，把同一件事情重复做10000小时，没有意义。必须不断总结，持续进步，10000小时定律，才有作用。
+
 ## 2017-01-26  用危机和竞争，激活团队
 鲶鱼效应：  
 挪威人爱吃沙丁鱼，尤其是鲜活的，所以活沙丁鱼的价格，是死的好几倍。但沙丁鱼生性懒惰不爱动，船舱里又缺氧，运到码头时，会死很多。据说，有位聪明的渔民想到一个办法：往鱼槽里扔一条鲶鱼。因为鲶鱼的入侵，沙丁鱼非常紧张，快速游动，最后，居然就活着到了港口。
