Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------------
 
+## 2017-01-28  可以撕的邮票
+故事：邮票，罗兰·希尔；齿孔邮票，亨利·阿彻
 
 ## 2017-01-27  明明早知道
 故事：挑战者号航天飞机
