Adds reading notes for the column - Today.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------------
 
+## 2017-01-28  寂静的春天
+故事：蕾切尔·卡森 滴滴涕（DDT）
+
 ## 2017-01-28  可以撕的邮票
 故事：邮票，罗兰·希尔；齿孔邮票，亨利·阿彻
 
