Adds reading notes for columns

--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-01-30  早是不是决定因素？
+在展望未来的时候，没有任何事情是“理所当然”的，总是有哪怕一丝丝的不确定，都可能以几何级数的量级放大恐惧的效果——并且，还有另外一个因素，那就是每个判断和决策所涉及到的金额。所涉及到的金额越大，越影响判断。
+
+早不早根本不重要，关键在于对不对，事实上，更关键的点在于，是否是长期对。于是，以后你就不用有幻觉了，“好像若是你早点知道你会不一样似的”。
+
 ## 2017-01-23  我能赚得更多吗？
 绝大多数人根本不知道 15% 以上的投资回报率“很可能原本就不属于自己”，于是，无知无畏。
 与大多数人认为的不同，“价值”并不是排在第一位的，“长期”应该先排上，然后再就加上“价值”，即“长期价值” —— 这才是我们要追求的东西。
