Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -4,7 +4,12 @@
 
 --------------------------------------------------------------------------------
 
-## 2017-01-28  寂静的春天
+## 2017-01-30  爱钱
+故事：帕特里奇亚 毛里奇奥·古驰，嫁入豪门，最后杀夫。
+
+宁愿坐在劳斯莱斯里哭，也不要在脚踏车上笑。
+
+## 2017-01-29  寂静的春天
 故事：蕾切尔·卡森 滴滴涕（DDT）
 
 ## 2017-01-28  可以撕的邮票
@@ -13,7 +18,7 @@
 ## 2017-01-27  明明早知道
 故事：挑战者号航天飞机
 
-## 2017-1-26  活人才付钱
+## 2017-01-26  活人才付钱
 故事：英国运送犯人到澳大利亚
 
 ## 2017-01-25  解放石头中的生命
