Adds some notes.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -4,6 +4,13 @@
 
 --------------------------------------------------------------------------------
 
+## 2017-02-02  文学革命是文化革命
+故事：
+阿里斯托芬，发明标点，2200 年前。  
+奥尔德斯·马努蒂尔乌斯，改良为今天常用标点。  
+北宋黄庭坚，发明句号。  
+胡适，提议建立新式标点，1919 年。
+
 ## 2017-01-30  爱钱
 故事：帕特里奇亚 毛里奇奥·古驰，嫁入豪门，最后杀夫。
 
