Adds reading notes for the book - IH.

--- a/note/...book_信息简史.md
+++ b/note/...book_信息简史.md
@@ -101,3 +101,57 @@ Ada 对于未来也有一个最后的梦想：
 薛定谔使用「基因」一词：某个遗传特征的假想的物质载体。
 这些微小实体却必须找到某种方法封装下一个生物体的全部模式，并且这个模式还必须是个四维对象。
 即生物体的三维结构，再加上从胚胎到成年的每个发育阶段的演变（时间维度）。
+
+
+## 10. 生命的编码
+基因存在于一种物质中，这种物质是一种核酸，更具体地，是脱氧核糖核酸（DNA）。
+它是由一种叫做核苷酸的更小单位构成，每个核苷酸含有一个碱基，碱基有四种，分别记为 A、C、G、T。
+很有可能，碱基的精确序列就是承载遗传信息的编码。
+
+复制 DNA，就是复制信息；制造蛋白质，就是转移信息，发送讯息。
+如果信息能够加载在声波或电脉冲上，那为什么不会是通过化学过程呢？
+信源编码理论中的一个经典问题：“核苷酸序列可被视作一条不带标点的无限长讯息，其中的任意有限长片段在加入适当的逗号后，都必须能够被译成一个氨基酸序列”。
+
+1977 年，冈特·斯滕特宣称，孟德尔的遗传因子或基因“最终明确认为”一段特定长度的 DNA。
+基因，其实就是 DNA 核苷酸的一段线性排列，它决定了蛋白质氨基酸的一段线性序列。
+
+我们不过是生存机器 —— 某种机器人载具，被盲目地编程为用来保全一种称为基因的自私分子。
+    -- 理查德·道金斯《自私的基因》
+
+基因的软件定义：遗传的基本单位，某种表现型差异的根源。
+基因不是什么携带信息的高分子，基因就是信息。
+基因本身是由比特构成的。
+
+
+## 11. 跃入模因池
+模因，不应被视为基本粒子，而应被视为生物体。数字三、蓝色不是模因，任何简单的想法也不是，就像单个核苷酸不是基因一样。
+模因是复杂单元，与众不同又易于记忆 —— 这样的单元要具有持久力。
+模因可以是故事、食谱、技能、传说或时尚等。
+遗传学家定义的自私，指的是提升自身相对于竞争者的存活几率的倾向。
+
+
+## 12. 认识随机性
+任何事先知道的、由某种特定原因决定的或根据某种计划实施的，都不是随机的。
+随机性也许可以用秩序来定义 —— 严格地说，是秩序的缺失。
+蔡廷：一个数只要是可计算的，即它能够被一个可定义的计算机程序生成，那它就不是随机的。因此，可计算性是随机性的一种度量。
+
+生成一个对象所需的最短计算机程序的长度，就是该对象的复杂度。
+无论哪一种计算机语言，它们其实都是等价的，都能规约到通用图灵机的语言。
+
+
+## 13. 信息是物理的
+惠勒，核裂变先驱，玻尔的学生，费曼的老师，黑洞的命名者。
+“黑洞无毛”就是他的名言之一，从黑洞外部能够观察到的只有黑洞的质量、电荷和自旋，其他信息“毛”都观察不到。
+他写到：黑洞给我们的启示是，空间可以像纸那样压缩成一个无穷小的点，时间可以像被扑灭的火焰那样消亡，而我们视为‘神圣’不可侵犯的物理定律则被证明并非如此。
+
+
+## 14. 洪流过后
+征服者处于报复的目的常常会焚毁书籍，彷佛敌人的灵魂就寄居其中。
+
+我们有捡起，必然也有丢落，而我们丢落的自有后来者捡起。
+我们在旅途中难免一死，但除去旅途本身，我们没有什么好失去的。
+
+
+## 15. 每天都有新消息
+遗忘被视为一种失效、一种浪费以及一个老之将至的信号。而现在，遗忘是需要付出代价才能做到的事情。遗忘也许与记忆一样重要。
+当信息变得廉价时，注意力就变得昂贵了。
