Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------------
 
+
+## 2017-02-03  我最好的作品就是你
+故事：小仲马，《茶花女》
+
 ## 2017-02-02  文学革命是文化革命
 故事：
 阿里斯托芬，发明标点，2200 年前。  
