--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,24 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-05  全部押上意味着什么？
+未来的最重要属性之一就是“部分不可知”。
+投资，是“面向未来的判断与决策”。
+尽量去做胜算超过 50% 的事情 —— 胜算当然越高越好，虽然无法完全达到 100%。
+为了回避那个最大的风险（从此再无机会），你作为投资者，必须牢记且绝对不能触犯的铁律是：永远不要押上全部！
+
+有个著名的公式，“凯利判据”（Kelly Criterion）。
+对于“赢了有收益，输了的话，下的注就一点都拿不回来”的赌局，有个可以计算最优单次下注占比（相对于总赌本）的公式：
+
+`f = [ p ( b + a ) - a ] / b`
+
+其中，
+f 是合理下注占比（相对于总赌本）；
+a 是单次下注金额；
+b 是每次下注 a 之后若是赢了的话能拿回的净利；
+p 是赢的概率
+
+
 ## 2017-01-30  早是不是决定因素？
 在展望未来的时候，没有任何事情是“理所当然”的，总是有哪怕一丝丝的不确定，都可能以几何级数的量级放大恐惧的效果——并且，还有另外一个因素，那就是每个判断和决策所涉及到的金额。所涉及到的金额越大，越影响判断。
 
