Adds reading notes for the column - 5m

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,7 +7,12 @@
 
 # 管理篇
 
-## 2017-02-05  你是想卖一辈子的糖水，还是改变世界
+## 2017-02-07  懒，是因为勤奋到没时间
+懒蚂蚁效应：懒于杂务，勤于动脑。
+春秋战国时期的“养士之风”，就是一种典型的应用。
+
+
+## 2017-02-06  你是想卖一辈子的糖水，还是改变世界
 不值得定律：就是如果你觉得一件事不值得做，你就不会把它做好。
 梦想最大的作用之一，就是赋予重复、繁琐的工作以意义。
 > 意义，是值不值的前提。
