Adds some notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,21 @@
 
 # 管理篇
 
+
+## 2017-02-09  你那不叫授权，你那叫授责
+拜伦法则：就是授权他人后就完全忘掉这回事，绝不去干涉。授权的常见错误，是“授责不授权”。
+孙振耀说，授权是一种离心力，集中控制是向心力，二者要求得统一与平衡。
+
+
+## 2017-02-08  把自己的权力关进笼子里
+热炉法则：就是组织中任何人触犯“规章制度”都要受到处罚。
+法律，是道德的一个子集，是最低的道德。遵守道德，社会可能会变好；违反法律，社会一定会变差。
+所以，违反道德会有人骂你，但违反法律会有人抓你。
+企业也是一样。规章制度，是企业文化的一个子集。
+这个子集中包含的，是你认为“如果这都违反了，企业会有大问题”的那些内容。
+所以在用人时，如果员工违反企业文化，你应该批评他，但违反规章制度，你必须惩罚他。
+
+
 ## 2017-02-07  懒，是因为勤奋到没时间
 懒蚂蚁效应：懒于杂务，勤于动脑。
 春秋战国时期的“养士之风”，就是一种典型的应用。
