--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -22,6 +22,9 @@ a 是单次下注金额；
 b 是每次下注 a 之后若是赢了的话能拿回的净利；
 p 是赢的概率
 
+安全是实实在在的保证。用概率的语言来讲就是，将自己全军覆没的可能性降到零，让它成为一个不可能发生的事件。
+安全感则不然，它是在追求一个完全确定的未来，希望没有任何付出的情况下，能够有百分之百确定的收益。
+
 
 ## 2017-01-30  早是不是决定因素？
 在展望未来的时候，没有任何事情是“理所当然”的，总是有哪怕一丝丝的不确定，都可能以几何级数的量级放大恐惧的效果——并且，还有另外一个因素，那就是每个判断和决策所涉及到的金额。所涉及到的金额越大，越影响判断。
