Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,11 @@
 # 管理篇
 
 
+## 2017-02-10  扔掉心中的错误放大镜
+波特定律：是指很多领导在用人时，总是盯着下属的错误。
+英国行为学家L·W·波特说：总盯着下属的错误，是一个领导者的最大错误。
+
+
 ## 2017-02-09  你那不叫授权，你那叫授责
 拜伦法则：就是授权他人后就完全忘掉这回事，绝不去干涉。授权的常见错误，是“授责不授权”。
 孙振耀说，授权是一种离心力，集中控制是向心力，二者要求得统一与平衡。
