--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-11  爱情的力量
+故事：理查德·洛文，米尔德丽德·杰特 黑白婚姻，突破婚姻德种族隔离
+
+## 2017-02-09  一加一等于...
+故事：威廉·摩根，排球德诞生
+
 ## 2017-02-03  我最好的作品就是你
 故事：小仲马，《茶花女》
 
