Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,10 @@
 
 # 管理篇
 
+## 2017-02-12  没解雇过员工，不是好管理者
+员工流失率：是考验“知人善用”的管理者的一个非常重要的指标。太高、太低都不好。
+有效沟通的结果是：一名优秀员工主动离职，你不惊讶；你让一名末位员工离职，他不惊讶。
+
 
 ## 2017-02-10  扔掉心中的错误放大镜
 波特定律：是指很多领导在用人时，总是盯着下属的错误。
