--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-12  生命奇迹
+故事：尼克·胡哲，天生没有双臂和双腿
+
 ## 2017-02-11  爱情的力量
 故事：理查德·洛文，米尔德丽德·杰特 黑白婚姻，突破婚姻德种族隔离
 
