--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,18 @@
 
 # 管理篇
 
+
+## 2017-02-14  你的公司有“户口制度”吗？
+职业生涯：是人生规划的一个部分。也许在一些管理者眼中，员工，是你管理系统中一个精妙的部件；
+但如果你能站在员工的角度看，职业，可能只是他人生历程中一个精彩的环节。他走进了你的公司，其实更是你的公司走进了他的生命。
+
+对很多人来说，甚至包括你在内，今天正在从事的职业，源自一个又一个冒失的偶然，始终“错配”，它并不是你最擅长的，也不一定是你最想要的。
+但有另一部分员工，他们始终不愿接受这种错配，对于真正梦想的职业，他们有着一颗焦躁、不甘和探索的心。
+如果你的公司内部能给他梦想的配对，那最好；如果不能，他一定会到外部继续寻找。
+
+内部流动的可能性越大，外部流动的可能性越小。
+
+
 ## 2017-02-12  没解雇过员工，不是好管理者
 员工流失率：是考验“知人善用”的管理者的一个非常重要的指标。太高、太低都不好。
 有效沟通的结果是：一名优秀员工主动离职，你不惊讶；你让一名末位员工离职，他不惊讶。
