--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-13  失窃的一代
+故事：澳大利亚政府 1910-1970 “白化政策”。
+
+没错，有些人会说那些事不是我做的，为什么关我的事？不，我们有“集体的仇恨”、有“集体的荣耀”、也应该学习拥有“集体的羞耻”。
+好像一片树叶，没有整棵树的默许，是不会变黄的。大家若没有隐藏的恶念，罪人也无法犯错。
+
 ## 2017-02-12  生命奇迹
 故事：尼克·胡哲，天生没有双臂和双腿
 
