--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-12  最简单的安全投资策略是什么？
+面对那些“充满了争议、甚至相互矛盾的理论”（还记得吗，“有争议”不代表“不正确”），你绝对不能问别人。
+别人的理解、解释、选择都是别人的，“拿来主义”在投资领域里早已证明为“必败”，“伸手党”注定是投资领域里的被捕食者。
+
+每一次对他人的无脑依赖，都是对自己能力磨练的进一步弃绝。
+如果你是不能自己研究、不能自己思考、不能自己选择的人，从一开始就不应该进入投资领域。
+这里是丛林，这里是现实生活中罕见的“达尔文主义绝对适用、肯定适用的领域”。
+
+所谓的成功，是用正确的方式去做正确的事情。做的事情是对的，即便是效率差一点，结果也是好的；做的事情是错的，效率越高越倒霉。
+
+
 ## 2017-02-05  全部押上意味着什么？
 未来的最重要属性之一就是“部分不可知”。
 投资，是“面向未来的判断与决策”。
