Adds reading notes for columns

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,26 @@
 # 管理篇
 
 
+## 2017-02-16  多一个朋友，少一个敌人
+离职面谈：不是挽回，也不是批评，而是面向未来，建立你们之间的新关系。
+问题：
+  - 如果是你做你老板的位置，你会有些什么不一样的做法？他觉得可以做得更好的地方，就是他认为他老板做得不好的地方。
+  - 你离开之前所负责的那个项目，怎么做下去最好？他这时给你的观点，不会阿谀奉承，而会是中肯的看法，值得参考。
+  - 你觉得，公司里谁可以勉强接替你的职位？他列举的名单，一定是那些他心中比他更强的。如果你问，谁谁谁合适吗？他说，不合适。那多半是他认为这个人水平很差。
+  - 你能推荐几个朋友加入我们公司吗？如果他直接拒绝你说：我觉得我周围没什么合适的。那基本上就说明，他对公司很失望，不愿意让朋友跳火坑。
+  - 你能不能答应我，在1年之内，不从公司挖人？提前获得一个君子承诺，非常重要。
+
+
+## 2017-02-15  给你的组织，装一个净水器
+酒与污水定律：一勺污水能污染一整桶酒，一颗老鼠屎就能坏掉一大锅粥。
+
+张亚勤在一次演讲时说过，有三种“污水”是不能被用小勺，倒进公司这个大桶的。
+如果真倒进来了，那要尽快用“净水器”过滤。他们是：
+  - 负能量的人
+  - 双面的人：对上阿谀奉承，对下声色俱厉
+  - 玩世不恭的人：自燃型、可燃型和不可燃型三种中的第三种，无法激发。
+
+
 ## 2017-02-14  你的公司有“户口制度”吗？
 职业生涯：是人生规划的一个部分。也许在一些管理者眼中，员工，是你管理系统中一个精妙的部件；
 但如果你能站在员工的角度看，职业，可能只是他人生历程中一个精彩的环节。他走进了你的公司，其实更是你的公司走进了他的生命。
