--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-14  为有情人牺牲的神父
+故事：情人节来源，St.Valentine's Day（圣·瓦伦丁日）
+
+今日我们所拥有的自由，即使是非常基本的人性需求，都是前人一点一滴力争而来。
+
 ## 2017-02-13  失窃的一代
 故事：澳大利亚政府 1910-1970 “白化政策”。
 
