Adds some notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,10 @@
 # 管理篇
 
 
+## 2017-02-17  你的公司有“前员工俱乐部”吗？
+前员工俱乐部：是员工从一家公司离职后，完全自发，或者在原公司支持下，半自发、半官方组成的一个联盟组织。
+
+
 ## 2017-02-16  多一个朋友，少一个敌人
 离职面谈：不是挽回，也不是批评，而是面向未来，建立你们之间的新关系。
 问题：
