Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,59 @@
 # 管理篇
 
 
+## 2017-02-23  打妖怪你去，背黑锅我来
+推功揽过：
+除了教练之功，所有的功劳，都要推到员工身上；除了法纪之过，所有的过错，都要揽到自己身上。
+
+美国著名橄榄球教练保罗·贝尔曾说过：“如果有什么事情办糟糕了的话，那一定是我做的；如果有什么事情做得还不错的话，那一定我们一起做的；如果有什么事情做得很好的话，就一定是全体球员他们做的。这是我们能取得比赛胜利的秘诀。”
+
+
+## 2017-02-22  不会把目标翻译成任务，要你何用？
+任务分解：就是把公司要求的目标，变成员工可执行的任务。
+
+
+## 2017-02-20  权力不是领导给的，权力是员工给的
+权力接受论：
+系统组织理论创始人切斯特·巴纳德，在《经理的职能》一书中提出了“权力接受论”：
+如果经理发出一个指令，被接受了，这个权力就成立了。如果不被接受，这个权力就被拒绝了。
+也就是说，一项指令是否具有权力，决定于指令的接受者，而不是指令的发布者。
+
+权力不是职位给的，权力是员工给的。职位，只是给了你一些用来从员工那里获得权力的工具。
+从员工成为经理后，你并没有自然而然地获得“权力”，你只是开始了获得这项“权力”的过程；
+一个让员工自愿被管理的过程，自愿把与工作相关的某些决策权力，交给你，并听从指挥的过程。
+
+你与生俱来就有两个工具：专家权，和表率权。成为经理后，职位又给你了三个工具：法定权，奖赏权，和惩罚权。
+“法定权”就是：我是经理你要听我的。这是约定俗成的，基于组织架构的权力。但是，通常法定权很难单独被接受，它还需要配合奖赏权，和惩罚权。
+这三种工具，都是通过外在手段，压制员工服从，所以我称之为“压力型工具”。
+专家权、表率权，是“动力型工具”。
+“专家权”是指，你会一件别人不会的事情，比如你能更专业地分配任务，让员工心服口服；比如你能在关键节点上，给别人很棒的操作建议。
+“表率权”是指，你拥有令人羡慕的个性、魅力，或者声望，受到别人的敬佩和赞誉，因此愿意模仿你，服从你。
+
+神，是从人类膜拜的精神力量中，获取能量；而魔呢，是从人类恐惧的精神力量中，获取能量。这就解释了为什么神要感化人类，魔要吓唬人类。
+膜拜是种动力，恐惧是种压力。
+真正的管理者，在成为经理之前，就已经拥有权力。这个权力，来自于“动力型工具”，来自于“自愿”。
+动力型工具，是获取权力的终极工具。它不但帮你从下级那里获取权力，还帮你从同级，甚至上级那里获得权力；
+它不但帮你从公司内部获取权力，还帮你从合作伙伴，甚至最终客户那里获取权力。
+权力，本质上是一种影响力，一种让别人自愿接受你的影响的能力。
+
+
+```
+评论：
+以法定权塑伦理，以奖赏权定导向，以惩罚权立权威，以专家权获信服，以表率权筑磁场。
+```
+
+## 2017-02-19  人生中的第一个管理问题
+古狄逊定理：英国证券交易所前主管古狄逊，针对这种情况说：不做累坏的主管，管理是让别人干活的艺术。
+接受可控的错误。把一定范围内员工犯错的损失，当成团队培训的成本。
+
+第一，明确分工。
+所有的具体工作，都要合理地安排给员工，不要有“我擅长，我来做”的心态。
+第二，轻易不动手。
+第三，区分方法和习惯。
+从员工成为经理，就必须要学会区分，当你是一名优秀员工时的那些做法中，哪些确实是值得学习的好方法，哪些只是你的习惯。
+很多新任管理者对下属的要求，其实都是希望别人按照自己无关紧要的特有习惯做事。
+
+
 ## 2017-02-17  你的公司有“前员工俱乐部”吗？
 前员工俱乐部：是员工从一家公司离职后，完全自发，或者在原公司支持下，半自发、半官方组成的一个联盟组织。
 
