--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-23  四岁的天才抽象艺术家
+故事：玛拉·奥姆斯特德，四岁女孩；波洛克抽象现代艺术
+
+人对价值的认定，是非常“意义”的；“意义”不同价值就不同。
+
 ## 2017-02-17  元宵与汤圆
 故事：汤圆说法的由来，袁世凯
 
