--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-19  长期究竟有多长？
+你越弱，你的长期越长...
+投资的重要秘密之一在于：你最好有除了投资以外的稳定收入来源...
+
+
 ## 2017-02-12  最简单的安全投资策略是什么？
 面对那些“充满了争议、甚至相互矛盾的理论”（还记得吗，“有争议”不代表“不正确”），你绝对不能问别人。
 别人的理解、解释、选择都是别人的，“拿来主义”在投资领域里早已证明为“必败”，“伸手党”注定是投资领域里的被捕食者。
