Supplements one note for the column - 5m.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -14,6 +14,9 @@
 
 美国著名橄榄球教练保罗·贝尔曾说过：“如果有什么事情办糟糕了的话，那一定是我做的；如果有什么事情做得还不错的话，那一定我们一起做的；如果有什么事情做得很好的话，就一定是全体球员他们做的。这是我们能取得比赛胜利的秘诀。”
 
+```
+评论：对外一句话，对内一册书。
+```
 
 ## 2017-02-22  不会把目标翻译成任务，要你何用？
 任务分解：就是把公司要求的目标，变成员工可执行的任务。
