Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,7 +8,30 @@
 # 管理篇
 
 
-## 2017-02-23  打妖怪你去，背黑锅我来
+## 2017-02-27  如无必要，勿增实体
+奥卡姆剃刀定律：
+奥卡姆剃刀定律是由14世纪逻辑学家，奥卡姆的威廉提出。
+奥卡姆是个地名，提出这个定律的人，是威廉。这个定律常被称为“如无必要、勿增实体”。
+
+
+## 2017-02-26  你的部门，有必要存在吗？
+独立的损益表：损益表，简单来说，就是：收入 - 成本 = 利润。
+
+
+## 2017-02-25  商业世界最重要的能力
+什么叫归因能力？就是他们做了一件事，做成功了，但是未必知道自己是怎么成功的。
+> 买了股票涨了，但未必知道为什么涨了。
+
+
+## 2017-02-22  亲密，但是不能无间
+刺猬法则：
+在一个寒冷的冬天，两只刺猬都冷得受不了，于是越靠越近、相依取暖，可是因为他们身上长满了刺，紧挨在一起，就会不小心刺痛对方。被刺痛的刺猬于是就分开一段距离。但是，分开后又实在冷得难受，就又彼此靠近，然后再被刺痛。最终，他们找到了一个最合适的距离，相互之间能够取暖，又能够很好地保护对方。
+
+这是一个非常有趣的现象，心理学家根据这一现象，总结出“刺猬原理”。
+也就是说，人与人之间，必须保持一个“合适的”距离，才能彼此依靠，却不互相伤害。
+
+
+## 2017-02-22  打妖怪你去，背黑锅我来
 推功揽过：
 除了教练之功，所有的功劳，都要推到员工身上；除了法纪之过，所有的过错，都要揽到自己身上。
 
@@ -18,7 +41,7 @@
 评论：对外一句话，对内一册书。
 ```
 
-## 2017-02-22  不会把目标翻译成任务，要你何用？
+## 2017-02-21  不会把目标翻译成任务，要你何用？
 任务分解：就是把公司要求的目标，变成员工可执行的任务。
 
 
