--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,18 +5,24 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-26  先见之明
+故事：里克·雷斯科拉，预见 911 世贸大厦撞击，拯救 3000 人。
+司马相如在《上书谏猎》里写道：“明者，远见于未萌；而智者，避危于无形。” 
+
+
 ## 2017-02-23  四岁的天才抽象艺术家
 故事：玛拉·奥姆斯特德，四岁女孩；波洛克抽象现代艺术
-
 人对价值的认定，是非常“意义”的；“意义”不同价值就不同。
+
 
 ## 2017-02-17  元宵与汤圆
 故事：汤圆说法的由来，袁世凯
 
+
 ## 2017-02-14  为有情人牺牲的神父
 故事：情人节来源，St.Valentine's Day（圣·瓦伦丁日）
-
 今日我们所拥有的自由，即使是非常基本的人性需求，都是前人一点一滴力争而来。
+
 
 ## 2017-02-13  失窃的一代
 故事：澳大利亚政府 1910-1970 “白化政策”。
@@ -24,8 +30,10 @@
 没错，有些人会说那些事不是我做的，为什么关我的事？不，我们有“集体的仇恨”、有“集体的荣耀”、也应该学习拥有“集体的羞耻”。
 好像一片树叶，没有整棵树的默许，是不会变黄的。大家若没有隐藏的恶念，罪人也无法犯错。
 
+
 ## 2017-02-12  生命奇迹
 故事：尼克·胡哲，天生没有双臂和双腿
+
 
 ## 2017-02-11  爱情的力量
 故事：理查德·洛文，米尔德丽德·杰特 黑白婚姻，突破婚姻德种族隔离
