--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,37 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-25  怎样识别“hype”？
+塔勒布甚至说，信息或者想法的预期寿命，和它的现有寿命成正比。
+比如说，“椅子”作为人类发明的一种东西，它本质上是个可复制的信息。而鉴于椅子已经存在了上千年的时间，我们可以预期它至少还会存在上千年的时间。一千年以后，计算机键盘、手机这些东西未必存在，但是椅子一定还存在。
+
+
+## 2017-02-24  时尚动力学
+从那个时候开始，时尚就有一个特别明显的特点，不管什么领域：
+新的就是好的，旧的就是坏的。（与此同时，特别旧的又是好的。）
+
+所谓的“时尚品位”，必须有一个时间变量。现在的好品位，几年前和几年后都不是好品位。
+所以时尚，其实是人们对“流行度”反应的结果。刚出来的时候有争议 —— 慢慢被小众喜欢 —— 等到成长起来了就成了被普遍认可的社会规范 —— 认可的人太多了，就会有人故意反流行 —— 反对者成为潮流，这个当初的时尚就消亡了……也许几十年后还会再度受到关注。 
+
+
+## 2017-02-22  怎么理解特别大和特别小的数
+接受这个世界是有风险的。交通有风险，我们也不能不上街。
+与其担心各种极小概率的危险，还不如把心思用在别的事情上 —— 那些更重要的事情。 
+
+什么东西都有弊端，但不是所有弊端都必须纠正。
+做任何事情都有利有弊，很多情况下如果你做个计算，利弊还是很容易看出来的，其中经常是数量级的差异。
+
+忽略小事不是因为大胆，不是“个性”，而是理性。
+重视小事就等于忽略大事。你必须判断轻重缓急，把精力和资源放在最重要的事情上。
+
+见识过、计算过、能做出理性决定，这才叫有胆有识。 
+
+
+## 2017-02-21  好目标=难度x具体
+企业家声音大但是没有使用科学方法，心理学家的结论更准确但是人微言轻。所以企业家得多读书，科学家得多写科普啊...
+好目标的要求就两条：第一，要有难度；第二，要具体。
+
+
 ## 2017-02-18  商业片的剧情公式
 好莱坞在“观众研究”方面下了狠功夫。最初是搞问卷调查，现在已经发展到在放电影的时候直接追踪观众的眼球运动。
 电影投资越来越大，一旦票房失败的损失不好承受
