--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-26  如何做到两倍薪水？
+如果这份工资背后的成本除了当时的时间之外，还要搭上你成长的机会成本，那么你要慎重考虑。
+比起现在赶快“挣大钱”，更重要的是让自己成长为配得上“大钱”的人。等到那个时候，自然会有与你相匹配的薪水来找你。
+
+
 ## 2017-02-19  长期究竟有多长？
 你越弱，你的长期越长...
 投资的重要秘密之一在于：你最好有除了投资以外的稳定收入来源...
