Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,33 @@
 # 管理篇
 
 
+## 2017-03-02  坐进你的管理驾驶舱
+KPI，关键绩效指标：
+和我们在第103课讲的“任务分解”不同。任务分解，是把目标，分解成可执行的任务。
+是在“如何执行”层面的思考。KPI，是把目标，分解成可考核的指标，是在“如何管理”层面的思考。
+
+KPI不能只有“后置的”结果指标，还要有“前置的”行为指标。
+“以结果为导向”虽然没错，但是等你可以考核结果时，结果已经不可改变。
+
+KPI有其适用性。KPI有用的前提，是战略已经清晰到可以流程化，所以目标可以分解为指标。
+但创业公司处于战略探索期，过早使用KPI，会因为KPI不能反应变化中的战略，而导致行为扭曲。
+雷军、张小龙都说要警惕KPI。为什么？不是因为他们是互联网公司，而是因为他们是创业公司。
+
+
+## 2017-02-28  如何防止：一放就乱，一管就死
+抓大放小管细：
+提出“科学管理”的那个美国管理学家泰勒认为：
+“为了提高效率和控制大局，上级只保留处理例外和非常规事件的决定权和控制权，例行和常规的权力由部下分享。”
+也就是说，大事，就是“例外的、非常规事件”。这句经典名言，在管理学上被称之为“例外原则”。
+
+当下级有问题时，你可以让他自己提方案。点评方案，而不是回答问题。
+如果直接回答问题，你觉得你在给建议，他觉得你在下命令。长此以往，这个“小”是放不下去的。
+
+放小，首先要知道什么算“小”。所有财务预算内、管理流程里的，都是小事。
+“抓大放小”就是：不算例外的决策，备案；算是例外的决策，报批。
+企业高层无为，中层有所为，基层无所不为，企业才能大有所为。
+
+
 ## 2017-02-27  如无必要，勿增实体
 奥卡姆剃刀定律：
 奥卡姆剃刀定律是由14世纪逻辑学家，奥卡姆的威廉提出。
