--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-27  只能再做一任
+故事：美国总统只能连任两届
+
+1951年2月27日，美国通过宪法二十二号修正案，确定以后任何人在任何情境下，做总统最多只能做两任，绝不可再做第三任。
+1940年，第二次世界大战正在进行。罗斯福总统打破了一百五十年的惯例，竞选第三任总统，也当选了
+到1944年，美国已参战，战争到了最后、最要紧的关头，所以他又当选总统，没做完任期就逝世。
+
+两任不再选的惯例，只是杰斐逊许多伟大贡献的一小件。
+他不只是伟大的政治家，还精通建筑学、数学、园艺学、生物学、考古学、词源学、密码学、测量学，同时也是作家、律师、小提琴手。
+肯尼迪总统在一场宴请四十九位诺贝尔奖得主的晚宴上说过一段话：
+“我觉得今天晚上的白宫，聚集了最多天才和人类的知识。或许除了当年杰斐逊一个人在这里吃晚餐的时候。”
+
+
 ## 2017-02-26  先见之明
 故事：里克·雷斯科拉，预见 911 世贸大厦撞击，拯救 3000 人。
 司马相如在《上书谏猎》里写道：“明者，远见于未萌；而智者，避危于无形。” 
