--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,9 +5,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-02-27  什么是幽默，什么是酷？
+人的行为的“酷”的意思，是“积极正面的反叛” —— 是“对不合理的主流的一次正当的打破”。
+亚利桑那大学市场学助理教授 Caleb Warren，提出了一个“通用的幽默理论”。
+这个理论说，所谓幽默，就是“温和的违反（benign violation）”。
+
+酷，体现了一种自由独立的精神，一种反抗精神。青少年非常崇拜这种精神，以不服从为荣。
+知乎上有个问题，“你听过最酷的一句话是哪句？”，答案有这些 —— 
+排在第一位的答案是“ 你还年轻，往后站 ”。
+一个有爆炸物的现场，年轻警察想进前查看，他的搭档，一位老警察，对他说了这句话。
+这句话似乎谈不上“违反”了什么东西，但是跟美国人说的“酷”一样，有一种英雄主义 —— 别人没指望他这么干，他干了。
+
+
 ## 2017-02-25  怎样识别“hype”？
 塔勒布甚至说，信息或者想法的预期寿命，和它的现有寿命成正比。
-比如说，“椅子”作为人类发明的一种东西，它本质上是个可复制的信息。而鉴于椅子已经存在了上千年的时间，我们可以预期它至少还会存在上千年的时间。一千年以后，计算机键盘、手机这些东西未必存在，但是椅子一定还存在。
+比如说，“椅子”作为人类发明的一种东西，它本质上是个可复制的信息。
+而鉴于椅子已经存在了上千年的时间，我们可以预期它至少还会存在上千年的时间。
+一千年以后，计算机键盘、手机这些东西未必存在，但是椅子一定还存在。
 
 
 ## 2017-02-24  时尚动力学
@@ -15,7 +29,10 @@
 新的就是好的，旧的就是坏的。（与此同时，特别旧的又是好的。）
 
 所谓的“时尚品位”，必须有一个时间变量。现在的好品位，几年前和几年后都不是好品位。
-所以时尚，其实是人们对“流行度”反应的结果。刚出来的时候有争议 —— 慢慢被小众喜欢 —— 等到成长起来了就成了被普遍认可的社会规范 —— 认可的人太多了，就会有人故意反流行 —— 反对者成为潮流，这个当初的时尚就消亡了……也许几十年后还会再度受到关注。 
+所以时尚，其实是人们对“流行度”反应的结果。
+刚出来的时候有争议 —— 慢慢被小众喜欢 —— 等到成长起来了就成了被普遍认可的社会规范 ——
+认可的人太多了，就会有人故意反流行 —— 反对者成为潮流，
+这个当初的时尚就消亡了……也许几十年后还会再度受到关注。 
 
 
 ## 2017-02-22  怎么理解特别大和特别小的数
@@ -42,7 +59,6 @@
 商业片和流行音乐一样，是最不自由的艺术形式。
 好的商业片编剧应该像建筑师一样在精确的规则之下设计剧情。
 也许让文艺青年拍商业片本质上就是一个错误。中国需要有工程师精神的电影人。 
-也许让文艺青年拍商业片本质上就是一个错误。中国需要有工程师精神的电影人
 
 
 ## 2017-02-17  经历的幸福和回忆的幸福
