Adds some reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,33 @@
 # 管理篇
 
 
+## 2017-03-09  如何做出好的决策
+完全理性决策，也就是在信息完备情况下的决策，就是数学，一门叫做“运筹学”的数学。运筹学，就是研究“最优决策”的学问。
+
+赫伯特·西蒙是一位真正的神人。他拥有9个博士学位，并因为研究决策理论，先后获得心理学领域最高奖“心理学杰出贡献奖”，计算机领域最高奖“图灵奖”，以及诺贝尔经济学奖。
+他说：当你无法获得决策所需的所有信息时，不要追求“最优决策”，而要追求“满意决策”。
+什么叫“满意决策”？他说：一切决策都是折中，只是在当时情况下可选的最佳行动方案。为了满意，而不是最优，你的决策应该遵循以下原则：
+第一，定下最基本的满意标准；第二，考察现有的可选方案；第三，如果有可选方案满足最基本的满意标准，就不再寻找更优方案。
+具体来说，你面试了一个人，达到你的基本要求，那就立刻来上班，而不是想：说不定有更好的；有收入让你满意的商业模式，那就立刻实施，而不是想：说不定有更多的。
+
+
+## 2017-03-06  不要用战术的勤奋，掩盖战略的懒惰
+战略思考：
+你想从上海去珠穆朗玛峰。珠峰是愿景，从上海到珠峰画条直线，就是方向。
+但如果你恰好不是超人，不能顺着这条直线飞过去，那这个直线就不是路径。
+你必须深刻了解地面环境，选择可行路径，曲线到达目的地。这条曲线路径，就是战略。
+作为CEO，最重要的工作，不仅仅是定愿景、指方向，然后激励大家前行，更要懂得战略思考，画出曲线路径。
+这是CEO不能推卸的责任，不可没有的能力。
+
+你选择走过丛林是战略，披荆斩棘是战术。
+有了好的战略，并不会让你不需要披荆斩棘，而是让你知道为什么必须要披荆斩棘。
+然后，全力以赴，ALL-IN，打赢每一场局部战役。
+
+
+## 2017-03-05  用一个人的梦想，点燃一群人的理想
+愿景就是梦想；使命就是职业；价值观就是道德。
+
+
 ## 2017-03-02  坐进你的管理驾驶舱
 KPI，关键绩效指标：
 和我们在第103课讲的“任务分解”不同。任务分解，是把目标，分解成可执行的任务。
