--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,18 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-5  慈悲的发明富豪
+于是乔治在1872年3月5日，将火车空气刹车器申请专利，成为十九世纪最重要、最伟大的发明之一。
+后来，所有的火车都使用这个系统，也开创了工业“标准化”的生产方式。
+乔治全名是乔治·威斯汀豪斯，西屋电气公司创始人。他一生发明了三百六十一项专利，是个发明奇才，也是一个心地善良的老板。
+他的许多发明都是出自慈悲助人的起心。他有一句名言：“我发明的东西越多，越觉得有更多的东西需要被发明。”
+
+
+## 2017-03-02  寻找小糖人
+故事：西斯托·罗德里格兹
+把自己看成珍珠，可能有被泥土埋没之苦。不如把自己视为泥土，让别人踩踏出一条路。
+
+
 ## 2017-02-27  只能再做一任
 故事：美国总统只能连任两届
 
