--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,30 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-09  三种浪漫体制
+就是一个结了婚的人，会慢慢变得不那么自私了。
+他学着去爱别人，自己也就变得更加值得被爱，他就变成了一个更好的人。
+自己亲手创造一个更好的关系，一个更好的事业，乃至一个更好的自己，这种成就才最值得追求。
+
+
+## 2017-03-07  爱心和理性
+咱们中国传统，用费孝通的说法，讲一个“差序格局”，就是谁离我越近，或者谁跟我血缘关系越亲，谁就对我越重要，我就对谁越好。
+
+
+## 2017-03-06  《俭省》解读3：从“刻意练习”到“功夫在诗外”
+这是一个需要通才的时代。可是“练习”容易刻意，但是成为通才，似乎很难刻意。
+你很难抱着实用的目的学习广泛的知识 —— 到底哪个知识有用，应该在各个领域投入多少时间最划算，这种优化问题根本无解。
+通才的目的本来就是为了对付复杂问题和不确定的局面，也许“什么知识到底有什么用”，这个问题就错了。
+如果哪个知识都可能有用，那你最应该关心的其实你对什么感兴趣。
+真正的斜杠青年追求的不是简历上多几个斜杠，而应该是培养广泛的兴趣，把知识本身当成回报。 
+
+
+## 2017-02-28  中产家长焦虑症
+今日名校竞争之激烈，很像是竞技体育选拔运动员。
+为了让孩子将来能进职业队当明星，你必须从小就严格训练，甚至可能一步走错都不行。
+那么也正如职业体育，通往名校之路会有大量的被淘汰者，会有人中途就失去资格，会有人永久性地受伤，会有人因此连平凡的一生都过不好。
+
+
 ## 2017-02-27  什么是幽默，什么是酷？
 人的行为的“酷”的意思，是“积极正面的反叛” —— 是“对不合理的主流的一次正当的打破”。
 亚利桑那大学市场学助理教授 Caleb Warren，提出了一个“通用的幽默理论”。
