--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-06  做个正常的时间买卖人
+你拿到的薪水（别人对你所出售时间的出价），只不过是他们对你的时间价值的“估值”。
+既然卖时间终将不划算，那么买时间终将划算。
+谁的时间最值得买？那些为自己打工的人的时间最值得购买...
+因为那些为自己打工的人的时间，总体上必然是被低估的，并且，最好的地方在于，这事儿连他们自己都知道！
+所谓的当老板，其实就是有资格批量、合理地购买他人时间，而后以适当的价格把那些时间的价值再卖出去... 
+
+
 ## 2017-02-26  如何做到两倍薪水？
 如果这份工资背后的成本除了当时的时间之外，还要搭上你成长的机会成本，那么你要慎重考虑。
 比起现在赶快“挣大钱”，更重要的是让自己成长为配得上“大钱”的人。等到那个时候，自然会有与你相匹配的薪水来找你。
