Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,20 @@
 # 管理篇
 
 
+## 2017-03-10  这不是一个坏问题，但我没有一个好答案
+平衡艺术：
+作为CEO，下到中盘，书上再也翻不到答案。每一个落子背后的长考，都是判断、取舍和平衡。
+而这些判断、取舍和平衡的复杂度，让CEO们成了孤独的思考者。
+因为你知道，你和喧嚣的观棋者们看到的，根本就不是一盘棋。
+
+```
+有关价值观的选择案例
+安达信会计师事务所成立于1913年。1914年，芝加哥铁路公司要求安达信做假账。
+刚创业、年仅28岁的安达信连付工资的钱都没有，但他却正告该公司：即使倾芝加哥全城之财富，也难以诱我让步。
+后来，安达信成为全球最大的会计师事务所。但是2001年，安然丑闻爆发。
+安达信为了公司业绩，也就是“结果”，不顾“过程”，帮助安然做假账。安达信这家百年老店，一夜之间，灰飞烟灭。
+```
+
 ## 2017-03-09  如何做出好的决策
 完全理性决策，也就是在信息完备情况下的决策，就是数学，一门叫做“运筹学”的数学。运筹学，就是研究“最优决策”的学问。
 
