--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,7 +5,21 @@
 --------------------------------------------------------------------------------
 
 
-## 2017-03-5  慈悲的发明富豪
+## 2017-03-09  让鲑鱼回家
+故事：美国华盛顿州艾瓦尔河的鲑鱼逆流产卵
+
+```
+评论：
+看过多次“鲑鱼洄游”的纪录片，每次都感到无比的震撼、惊叹、感动、悲悯、泪流满面。
+鲑鱼回家的路上，要闯过无数的险滩，飞跃无数的瀑布，很多在途中就成了灰熊、老鹰或海鸥的腹中餐。
+它们浩浩荡荡，逆风而上，游经几千公里，历尽千辛万苦，终于游到出生地。此时它们早已精疲力竭，遍体鳞伤。然后成双结对，挖坑产卵，最后安详地死去。
+冬天来临，新的生命悄然而至，鱼卵在来年三四月，自然孵化成小鱼。小鱼离开故乡，开始新的生命之旅。四年后，鲑鱼成熟，又游回它们的出生地产卵，周而复始。
+鲑鱼在生命密码的召唤下，在生命的最后也不放弃，一路跌跌撞撞，奋勇直前，如此悲壮而又完美的生命，怎不让人感动！大自然的奇迹，怎不令人惊叹！
+```
+
+## 2017-03-05  慈悲的发明富豪
+故事：乔治·威斯汀豪斯，发明火车空气刹车
+
 于是乔治在1872年3月5日，将火车空气刹车器申请专利，成为十九世纪最重要、最伟大的发明之一。
 后来，所有的火车都使用这个系统，也开创了工业“标准化”的生产方式。
 乔治全名是乔治·威斯汀豪斯，西屋电气公司创始人。他一生发明了三百六十一项专利，是个发明奇才，也是一个心地善良的老板。
