--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,41 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-03  什么算是内幕交易
+英美法系（又称为普通法系）和欧洲大陆以及中国的法律体系（欧陆法系）不同，
+后者必须有成文的法律才能进行判决，而前者不需要，可以（由陪审团）通过常识作出是否违法的判决。
+而先前的判决在今后就成了具有法律依据的判例。在大陆法系的国家，制定法律需要很长的时间，
+罪犯很容易钻法律空子，而在英美等国，在很大程度上避免了这个问题。
+
+近几十年来对于内幕交易最重要的判例就是1983年由大法官鲍威尔（Lewis Powell Jr.）对德克斯诉美国证监会一案和去年（2016）塞尔曼诉美国案(Salman v. United States)的裁决。
+鲍威尔大法官主笔判决意见书，他在判决中指出，是否是内幕交易的标准在于泄露消息的人是否从获得内幕消息的人那里得到利益。
+但是这样又提出了两个新的问题。首先是利益本身如何定义，因为它可以是非金钱、非物质的。
+比如为了增进友谊，拉关系，提供信息，算不算是获得利益？
+其次，很多时候，泄露内部消息的人是随口说的，听到的人得到这个消息做了交易挣到钱，是不会声张的，通常也不会告诉泄露消息的人，因此这种无意中的利益输送算不算？
+对于这两个问题，最高法院沉默了整整33年。直到2016年。
+
+2016年10月5日最高法院开庭审理此案。由于塞尔曼在下级法院输掉了案子，因此他的律师在最高法院首先陈述。
+这位律师一直以马哈尔·卡拉没有利益的目的，是无意泄露消息为理由，否认内幕交易的提法，但是他从一开始就陷入了苦战。
+大法官布雷耶直言：“帮助家庭成员就是帮助自己。”按这个逻辑，那只要是亲戚朋友获利，就等于自己获利，因此即使一分钱的好处没有拿，也算有利益输送。
+
+2016年12月6日，美国最高法院以8:0维持了下级法院的有罪判决。
+虽然塞尔曼一案依然没有完全划定全部内幕交易的边界，但是至少它把亲戚朋友之间传递“内幕消息”链条彻底斩断了。
+
+
+## 2017-03-01  常识、科技和艺术
+真正在职场上处理好各种关系，需要有一些基本的常识，有一些基本的技术，这些技术在领导力培训时都会教。
+但是，最终能否做得好，则是艺术。没有常识的人，常常被认为是没有情商，没有掌握和人相处技术的人，常常被看作经验不足，或者太嫩。
+如果解决了常识的问题、技术的问题，即便没有和人相处的艺术，也不会遇到什么麻烦了。
+
+
+## 2017-02-28  剖析两个忽悠人的经济学指标
+总的来讲，我自己虽然在商学院当教授，也研究经济，但是不太相信经济学家的话。
+在经济上，只有钱是真的，理论如果不能和它相一致，都是假的。这也是为什么很多经济学家自己炒股挣不到钱的原因。
+
+你可能要问，对于这些不靠谱的经济学数据怎么办？
+如果你有能力，有兴趣搞懂它们，不妨像我一样自己去思考，如果你没有时间和基础做这件事情，相信世界会变得更好即可。
+
+
 ## 2017-02-21  在大学学什么
 学习又分为广义上的学习和狭义上的学习。
 前一种包括我们常说的学做人，思想上的修行等等，后者是特指知识、技能和方法方面的学习。
