Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,15 @@
 # 管理篇
 
 
+## 2017-03-13  项目三角形
+项目三角形：
+我们把范围、时间和成本，作为三条边，画一个三角形，然后把范围的边加长。
+有一些基础几何知识的同学就知道，这时我们必须相应加长时间，或者成本，来使得三角形保持闭合。
+如果我们想降低成本呢？同样，我们需要调整另外两者。这就是著名的“项目三角形”。
+
+> 三者不可兼得，和 CAP 类似
+
+
 ## 2017-03-10  这不是一个坏问题，但我没有一个好答案
 平衡艺术：
 作为CEO，下到中盘，书上再也翻不到答案。每一个落子背后的长考，都是判断、取舍和平衡。
