--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,27 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-07  投资101（2）：为什么投资会有回报？
+财富只有两个来源，创造和掠夺！从长远来讲，通过创造能获得的财富要远比通过掠夺可以获得的多得多。
+马克思和恩格斯有句话说得特别到位，“在不到100年的时间里，资产阶级创造的生产力比过去一切时代创造的全部生产力还要多，还要大”。
+这揭示了我们财富的来源之谜。顺便说一句，这句话来自于《共产党宣言》
+
+对于一个国家，情况也是如此，假如经济发展的速度是10%，也就是说它今年比去年多创造了10%的财富，那么创造这些财富的公司（或者其他机构）的价值，也应该相应增长。
+因此，从这个角度讲，股市从长期来看永远是向上走的，这是投资时少数几个几乎永远成立的结论。
+正是因为如此，巴菲特才不建议做空股市，因为这是和客观规律相违背的，也正是因为如此，那些坚持在股市上长期不断投资的人都挣到钱了。
+
+
+## 2017-03-06  投资101（1）：第一堂投资课
+学习投资的另一个必要性是，能够在生活中用一种理性的态度、量化的方法看待各种事情，处理各种事情。
+
+`夏普比率 =（投资回报－无风险回报）／波动性的标准差`
+
+投资本身的目的是为了什么？大部分人会说是为了发财，或者说为了回报。这是一部分人的目的，但是并非所有人的目的。
+很多人，尤其是我在之前信中提到的大家族（第121封信丨家族财富），投资的第一目的是为了保证财产不受损失。
+
+学习投资的另一个必要性是，能够在生活中用一种理性的态度、量化的方法看待各种事情，处理各种事情。
+
+
 ## 2017-03-03  什么算是内幕交易
 英美法系（又称为普通法系）和欧洲大陆以及中国的法律体系（欧陆法系）不同，
 后者必须有成文的法律才能进行判决，而前者不需要，可以（由陪审团）通过常识作出是否违法的判决。
