--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,20 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-12  量子纠缠
+爱因斯坦提出这个思想实验，就是为了证明“量子叠加态”这个理解是错的。
+爱因斯坦说，假设我们有一对电子，在发射之前，这对电子的总自旋为0，那么根据角动量守恒定律，如果其中一个电子的自旋为正，那么另一个电子的自旋一定为负。
+爱因斯坦说，那我们就等一会儿，等到两个电子已经分开很远距离之后再观测。你观测到其中一个电子的自旋为正，那么你马上就知道，另一个电子的自旋为负。
+在你观测到之前，这两个电子都处于正负叠加态，但当你观测到一个电子之后，导致了它的波函数塌缩，与此同时，另一个电子的波函数也必定塌缩。
+这个塌缩了，那个就马上跟着塌缩 —— 这不成了超距作用了吗？
+
+
+## 2017-03-11  答读者问：有梦想算不算
+不同学科的知识的可靠度差别极大，物理学不如数学可靠，化学不如物理学，医学不如化学，营养学不如医学。
+可是有资格的人这么多，有成就的为什么很少呢？这才是你应该关心的问题。
+你想变厉害，就应该关注那些厉害的人，而不是那些仅仅取得了参赛资格的人。
+
+
 ## 2017-03-09  三种浪漫体制
 就是一个结了婚的人，会慢慢变得不那么自私了。
 他学着去爱别人，自己也就变得更加值得被爱，他就变成了一个更好的人。
