--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,12 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-13  为什么你一定要学会写作
+所谓‘普通人’并不是因为起步时普通，而是因为他们‘永远普通地活着’才成了所谓的‘普通人’。
+持续写作很可能是锻炼学习能力、锻炼思考能力、锻炼分析能力、锻炼沟通能力的最直接、最低成本的方式。
+
+
 ## 2017-03-06  做个正常的时间买卖人
 你拿到的薪水（别人对你所出售时间的出价），只不过是他们对你的时间价值的“估值”。
 既然卖时间终将不划算，那么买时间终将划算。
 谁的时间最值得买？那些为自己打工的人的时间最值得购买...
 因为那些为自己打工的人的时间，总体上必然是被低估的，并且，最好的地方在于，这事儿连他们自己都知道！
-所谓的当老板，其实就是有资格批量、合理地购买他人时间，而后以适当的价格把那些时间的价值再卖出去... 
+所谓的当老板，其实就是有资格批量、合理地购买他人时间，而后以适当的价格把那些时间的价值再卖出去...
 
 
 ## 2017-02-26  如何做到两倍薪水？
