Adds reading notes for columns.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,20 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-09  投资101（4）：投资中的骗局
+长期投资，获得的是长期收益的部分，而让风险波动的部分相互抵消，好赌博的人看到的是短期的波动，而忽略长期的收益。
+
+中国买卖一次股票各种税费超过0.1%，别看这个钱少，如果你老玩昨天买今天卖的游戏，一年10%以上的钱都交给了收费的。
+这就和进赌场没有差别。所有做证券的，都希望你频繁交易，因为不论你挣钱还是亏钱，他们都挣钱。
+因此，听那些基金经理和机构讲话时，都必须牢记，他们和你有利益冲突。
+
+世界上没有一个国家打算归还主权债务的本金的，都在玩借新债，还旧债的游戏。
+唯一的差别在于，它们是否能够创造出足够多的财富，支付债券的利息，以及能否有足够好的发展前景，让它的新债能够卖得出去。
+如果最终借不来新债，或者借到的新债还不了旧债，那么只能赖账和变相赖账了（被称为defaulty）。
+在历史上，希腊、俄罗斯、阿根廷都做过赖账不还的事情。
+
+
+
 ## 2017-03-07  投资101（2）：为什么投资会有回报？
 财富只有两个来源，创造和掠夺！从长远来讲，通过创造能获得的财富要远比通过掠夺可以获得的多得多。
 马克思和恩格斯有句话说得特别到位，“在不到100年的时间里，资产阶级创造的生产力比过去一切时代创造的全部生产力还要多，还要大”。
