--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-15  老大美国说
+中国一线城市限制人的办法是户口 —— 没有户口你来了也不给你福利，但是至少还让你来，还有工作给你。
+美国没有户口，只要你是美国人，来了就都是平等的，但美国城市限制人的办法是直接限制城市开发 —— 根本没有地方给你，想来也来不了。
+
+可是他马上就想到，五十年代的人根本就不会羡慕我们 —— 他们以为到我们这个时候早就应该已经实现了科幻电影里那些技术，早就开始星际旅行了！
+他们万万没想到，我们现在的进步只是把星际旅行的科幻电影拍得比以前好。
+
+
 ## 2017-03-12  量子纠缠
 爱因斯坦提出这个思想实验，就是为了证明“量子叠加态”这个理解是错的。
 爱因斯坦说，假设我们有一对电子，在发射之前，这对电子的总自旋为0，那么根据角动量守恒定律，如果其中一个电子的自旋为正，那么另一个电子的自旋一定为负。
