--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -9,6 +9,9 @@
 所谓‘普通人’并不是因为起步时普通，而是因为他们‘永远普通地活着’才成了所谓的‘普通人’。
 持续写作很可能是锻炼学习能力、锻炼思考能力、锻炼分析能力、锻炼沟通能力的最直接、最低成本的方式。
 
+记得之前国外有过一项研究：对于水平相差不多的人来说，听课的时候只要你记笔记，就会比那些不记笔记的同学有更好的学习效果。
+这里面最有意思的一点就是：即便你回去后没有看过一眼笔记，也比那些没记的人要强。
+
 
 ## 2017-03-06  做个正常的时间买卖人
 你拿到的薪水（别人对你所出售时间的出价），只不过是他们对你的时间价值的“估值”。
