--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,28 @@
 # 管理篇
 
 
+## 2017-03-14  变态的质量，源自于变态的过程管理
+概念：六西格玛
+Sigma 是统计学上的一个概念，中文叫“标准差”，用来衡量一组数据与“标准”之间的“偏差”。
+这个标准差，我们通常用“每百万次采样数的缺陷率”（DPMO）来衡量。
+1-sigma，就是每百万件抽样中，有69万个不合格，相当于一本书每页有170个错别字。
+3-sigma，就是每百万件抽样中，有6.7万个不合格，相当于一本书每页有1.5个错字。
+那么6-sigma呢？就是每百万件抽样中，有3.4个不合格，相当于整个小型图书馆的所有藏书中，只有1个错别字。
+
+```
+关于质量控制，日本企业有很多很好的范例。
+比如优衣库，希望做出低价高品质的产品。优衣库在中国有不少加工厂，业界的平均次品率是2％-3％，也就是每百万有2-3万个次品，相当于4sigma吧。
+而优衣库要求工厂把次品率降到0.2-0.3％。而且优衣库评价次品率的规则非常严格，一件T恤表面如果有一个0.5毫米的线头，这就算次品。
+```
+
+DMAIC是五个英文单词的缩写。
+D代表Define，定义质量问题；
+M代表Measure，收集有关质量问题的数据；
+A代表Analysis，分析数据、发现问题的主要原因；
+I代表Improve，针对原因进行改进；
+C代表Control，监控改进结果，不断循环。
+
+
 ## 2017-03-13  项目三角形
 项目三角形：
 我们把范围、时间和成本，作为三条边，画一个三角形，然后把范围的边加长。
