--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-13  围绕目的进行资产配置
+如果投资是为了长期稳定性的增值，那么投资的效果主要取决于资产的配置而并非哪一支股票的选择，或者哪一次投资机会的把握。
+
+
+## 2017-03-12  红醇美酒（8）：红酒不同的风味是如何产生的
+通常一个橡木桶只能使用两次，它的价格是几百美元到上千美元，可以酿三百多瓶酒，算下来，每瓶酒都要摊上好几美元。
+
+
 ## 2017-03-09  投资101（4）：投资中的骗局
 长期投资，获得的是长期收益的部分，而让风险波动的部分相互抵消，好赌博的人看到的是短期的波动，而忽略长期的收益。
 
@@ -16,7 +24,6 @@
 唯一的差别在于，它们是否能够创造出足够多的财富，支付债券的利息，以及能否有足够好的发展前景，让它的新债能够卖得出去。
 如果最终借不来新债，或者借到的新债还不了旧债，那么只能赖账和变相赖账了（被称为defaulty）。
 在历史上，希腊、俄罗斯、阿根廷都做过赖账不还的事情。
-
 
 
 ## 2017-03-07  投资101（2）：为什么投资会有回报？
