--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -12,6 +12,8 @@
 记得之前国外有过一项研究：对于水平相差不多的人来说，听课的时候只要你记笔记，就会比那些不记笔记的同学有更好的学习效果。
 这里面最有意思的一点就是：即便你回去后没有看过一眼笔记，也比那些没记的人要强。
 
+有的时候，“一点弯路也不想走”反倒成为大家犹豫不决的重要原因。因为每一步都想走的无比正确，最后连一步都没有迈出去。
+
 
 ## 2017-03-06  做个正常的时间买卖人
 你拿到的薪水（别人对你所出售时间的出价），只不过是他们对你的时间价值的“估值”。
