Adds reading notes of columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,19 @@
 # 管理篇
 
 
+## 2017-03-16  悲剧里挖出来的学问
+风险管理：
+风险管理的目标就是要以最小的成本获取最大的安全保障。
+要理解风险管理，必须首先理解风险的两个维度：损失和可能性。
+
+`风险 = 损失 x 可能性`
+
+损失大，可能性小 -> 转嫁（保险）
+损失大，可能性大 -> 规避（赌博，投机）
+损失中，可能性中 -> 预防（企业经营法律风险、员工离职和客户流失风险）
+损失小，可能性小 -> 自留（认了）
+
+
 ## 2017-03-14  变态的质量，源自于变态的过程管理
 概念：六西格玛
 Sigma 是统计学上的一个概念，中文叫“标准差”，用来衡量一组数据与“标准”之间的“偏差”。
