--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-14  投资101（7）：补充介绍几个金融常识
+任何国家的股市都不是完美的，正是股市的不可预测性，才给理性的投资人以机会，才将赌徒们淘汰出局。
+任何事情都有一个准入的成本，或者说切换的成本。大到换工作，小到换手机，换电脑，都是如此。
+到新单位前三个月乃至半年，要重新学习和适应，其实做不了太重要的事情，这就是准入成本。
+
+
 ## 2017-03-13  围绕目的进行资产配置
 如果投资是为了长期稳定性的增值，那么投资的效果主要取决于资产的配置而并非哪一支股票的选择，或者哪一次投资机会的把握。
 
