--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -14,6 +14,11 @@
 
 有的时候，“一点弯路也不想走”反倒成为大家犹豫不决的重要原因。因为每一步都想走的无比正确，最后连一步都没有迈出去。
 
+对于一个不写作的人来说，他看一本书或者一部电影的投入度就没有那么高，因为他不需要记录什么，所以错过了也就错过了。
+但是对于一个经常写作的人来说，因为他需要搜集素材，所以他会更认真地去对待每一本书和电影，或者说他会更加认真地生活。
+因为只有这样，当他面对屏幕的时候，才会有话可说，有文章可写。
+所以说写作只是一种手段，它能够帮助我们更加仔细地体会生活，思考那些容易被我们忽略的细节，逼着我们不断前进，直到有一天发现我们已经成长为理想中的那个样子。
+
 
 ## 2017-03-06  做个正常的时间买卖人
 你拿到的薪水（别人对你所出售时间的出价），只不过是他们对你的时间价值的“估值”。
